--- a/src/styles.css
+++ b/src/styles.css
@@ -192,7 +192,19 @@ section.bottom {
         padding: 0 1rem;
     }
 
+    .nav-center {
+        padding-left: 1rem;
+    }
+
     .nav-center ul {
         gap: 2rem;
+    }
+
+    .top p {
+        padding: 1rem;
+    }
+
+    .socials ul {
+        padding: 4rem;
     }
 }
